Exportation des données

--- a/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P6 - revisions ML.ipynb
+++ b/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P6 - revisions ML.ipynb
@@ -75,10 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -118,7 +123,48 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_movies = pd.read_csv('5000_movies_bis.csv')\n",
+    "df_movies.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3033,)"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " ##  combien y a-t-il d'observations/de variables ?\n",
+    "\n",
+    "df_movies.shape\n",
+    "\n",
+    "## sur combien d'années se répartissent les données ?\n",
+    "\n",
+    "df_movies['title_year'].unique().shape\n",
+    "\n",
+    "##  combien de pays sont représentés ?\n",
+    "\n",
+    "df_movies['country'].unique().shape\n",
+    "\n",
+    "## combien de réalisateurs différents dans la base ?\n",
+    "\n",
+    "df_movies['director_name'].unique().shape\n",
+    "\n",
+    "## combien d'acteurs et d'actrices différentes ?\n",
+    "\n",
+    "df_movies['actor_2_name'].unique().shape\n"
+   ]
   },
   {
    "cell_type": "markdown",
