regression lineaire update

--- a/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P4 - revisions ML.ipynb
+++ b/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P4 - revisions ML.ipynb
@@ -1553,8 +1553,8 @@
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "lr = LinearRegression()\n",
-    "lr.fit(X_train_std, y_train)"
+    "linear = LinearRegression()\n",
+    "linear.fit(X_train_std, y_train)"
    ]
   },
   {
@@ -1573,8 +1573,8 @@
    "source": [
     "# Evaluation du  modele de RL avec le score R2\n",
     "\n",
-    "score_train = lr.score(X_train_std, y_train)\n",
-    "score_test = lr.score(X_test_std, y_test)\n",
+    "score_train = linear.score(X_train_std, y_train)\n",
+    "score_test = linear.score(X_test_std, y_test)\n",
     "print(f\"{score_train =} et {score_test = }\")"
    ]
   },
@@ -1642,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -1651,7 +1651,7 @@
        "array([0.29273356, 0.34851019, 0.32367763, 0.30800804, 0.33010038])"
       ]
      },
-     "execution_count": 353,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 387,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1675,7 @@
        "0.7392"
       ]
      },
-     "execution_count": 387,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1684,7 +1684,7 @@
     "#Calcul des erreurs standard servant d'indicateur d'amélioration du modele \n",
     "\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "error0 = round(mean_squared_error(lr.predict(X_test_std),y_test), 4)\n",
+    "error0 = round(mean_squared_error(linear.predict(X_test_std),y_test), 4)\n",
     "error0"
    ]
   },
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 410,
    "metadata": {},
    "outputs": [
     {
@@ -1846,7 +1846,6 @@
     "ax1.set_ylabel('Coefficients')\n",
     "\n",
     "\n",
-    "\n",
     "ax2.plot(alphas, errors, [10**-5, 10**5], [error0, error0])\n",
     "ax2.set_xscale('log')\n",
     "ax2.set_xlabel('Paramètres de régularisation')\n",
@@ -1859,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 411,
    "metadata": {},
    "outputs": [
     {
@@ -1908,11 +1907,134 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Etant donnée que la variable dépendante du modèle est une variable continue, d'autres modèles de régression existent pour prédire ce modèle comme knn, svm, random forest, etc..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 425,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=KFold(n_splits=10, random_state=None, shuffle=True),\n",
+       "             estimator=KNeighborsRegressor(),\n",
+       "             param_grid={'n_neighbors': [1, 2, 3, 4, 5, 6, 7, 8, 9]},\n",
+       "             scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 425,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tester chaque valeur du modele knn\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.model_selection import GridSearchCV, KFold, cross_val_score\n",
+    "\n",
+    "cvgrid = GridSearchCV(\n",
+    "  estimator=KNeighborsRegressor(),\n",
+    "  param_grid={'n_neighbors':list(range(1, 10))},\n",
+    "  scoring='neg_mean_squared_error',\n",
+    "  return_train_score=False,\n",
+    "  cv = KFold(n_splits=10, shuffle=True)\n",
+    ")\n",
+    "cvgrid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.24204897, 0.27915954, 0.2863304 , 0.2749219 , 0.26337413])"
+      ]
+     },
+     "execution_count": 428,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_val_score(KNeighborsRegressor(), X_train_std, y_train, cv =5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 426,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsRegressor(n_neighbors=8)"
+      ]
+     },
+     "execution_count": 426,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cvgrid.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 427,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Le score de validation croisée du modele knn: [0.2766265  0.3780271  0.3253023  0.3576164  0.31909668] / score_moyen = 0.3313337958627359\n",
+      "Le score de validation croisée du modele linear: [0.29273356 0.34851019 0.32367763 0.30800804 0.33010038] / score_moyen = 0.3206059594772252\n",
+      "Le score de validation croisée du modele ridge: [0.29273485 0.34863001 0.32363235 0.3080632  0.33004346] / score_moyen = 0.32062077572067904\n",
+      "Le score de validation croisée du modele lasso: [-1.06608397e-04 -2.96856048e-03 -2.07782617e-06 -5.08448278e-03\n",
+      " -1.73584738e-04] / score_moyen = -0.0016670628450917492\n",
+      "Le score de validation croisée du modele svr_l: [0.28282525 0.34747488 0.31958227 0.28304603 0.32932504] / score_moyen = 0.3124506908855914\n",
+      "Le score de validation croisée du modele svr_r: [0.3939641  0.46916071 0.39339461 0.35890428 0.41206338] / score_moyen = 0.4054974153938719\n",
+      "Le score de validation croisée du modele svr_p: [-0.83972424 -1.00000496  0.0055747  -0.32537879 -0.82768936] / score_moyen = -0.5974445312434536\n",
+      "Le score de validation croisée du modele rfor: [0.27571597 0.34146713 0.28121133 0.28246964 0.26463507] / score_moyen = 0.2890998288188267\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Importer toutes les libraires necessaires à la mise en place des modeles de régression\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.svm import SVR \n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "models = {\n",
+    "\n",
+    "  'knn': KNeighborsRegressor(n_neighbors=10),\n",
+    "  'linear': LinearRegression(),\n",
+    "  'ridge': Ridge(),\n",
+    "  'lasso': Lasso(),\n",
+    "  'svr_l': SVR(kernel='linear', gamma='auto', C=1, degree=3),\n",
+    "  'svr_r': SVR(kernel='rbf', gamma='auto', C=1, degree=3),\n",
+    "  'svr_p': SVR(kernel='poly', gamma='auto', C=1, degree=3),\n",
+    "  'rfor': RandomForestRegressor(criterion='mse', max_depth=2, random_state=0)\n",
+    "\n",
+    "}\n",
+    "for i, j in models.items():\n",
+    "  model = j\n",
+    "  scores = cross_val_score(model, X_train_std, y_train, cv=5)\n",
+    "\n",
+    "  print(f\"Le score de validation croisée du modele {i}: {scores} / score_moyen = {np.mean(scores)} / \")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
