--- a/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P4 - revisions ML.ipynb
+++ b/Projets/Projet P4 - Révisions ML du preprocessing au template/Projet P4 - revisions ML.ipynb
@@ -75,14 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importations  des librairies necessaires au projet\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "\n"
    ]
   },
   {
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +156,14 @@
        "      <th>actor_1_fb_likes</th>\n",
        "      <th>gross</th>\n",
        "      <th>genres</th>\n",
-       "      <th>...</th>\n",
+       "      <th>actor_1_name</th>\n",
+       "      <th>movie_title</th>\n",
+       "      <th>num_voted_users</th>\n",
+       "      <th>cast_total_fb_likes</th>\n",
+       "      <th>actor_3_name</th>\n",
+       "      <th>facenumber_in_poster</th>\n",
+       "      <th>plot_keywords</th>\n",
+       "      <th>movie_imdb_link</th>\n",
        "      <th>num_user_for_reviews</th>\n",
        "      <th>language</th>\n",
        "      <th>country</th>\n",
@@ -180,7 +189,14 @@
        "      <td>1000.0</td>\n",
        "      <td>760505847.0</td>\n",
        "      <td>Action|Adventure|Fantasy|Sci-Fi</td>\n",
-       "      <td>...</td>\n",
+       "      <td>CCH Pounder</td>\n",
+       "      <td>Avatar</td>\n",
+       "      <td>886204</td>\n",
+       "      <td>4834</td>\n",
+       "      <td>Wes Studi</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>avatar|future|marine|native|paraplegic</td>\n",
+       "      <td>http://www.imdb.com/title/tt0499549/?ref_=fn_t...</td>\n",
        "      <td>3054.0</td>\n",
        "      <td>English</td>\n",
        "      <td>USA</td>\n",
@@ -204,7 +220,14 @@
        "      <td>40000.0</td>\n",
        "      <td>309404152.0</td>\n",
        "      <td>Action|Adventure|Fantasy</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Johnny Depp</td>\n",
+       "      <td>Pirates of the Caribbean: At World's End</td>\n",
+       "      <td>471220</td>\n",
+       "      <td>48350</td>\n",
+       "      <td>Jack Davenport</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>goddess|marriage ceremony|marriage proposal|pi...</td>\n",
+       "      <td>http://www.imdb.com/title/tt0449088/?ref_=fn_t...</td>\n",
        "      <td>1238.0</td>\n",
        "      <td>English</td>\n",
        "      <td>USA</td>\n",
@@ -228,7 +251,14 @@
        "      <td>11000.0</td>\n",
        "      <td>200074175.0</td>\n",
        "      <td>Action|Adventure|Thriller</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Christoph Waltz</td>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>275868</td>\n",
+       "      <td>11700</td>\n",
+       "      <td>Stephanie Sigman</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>bomb|espionage|sequel|spy|terrorist</td>\n",
+       "      <td>http://www.imdb.com/title/tt2379713/?ref_=fn_t...</td>\n",
        "      <td>994.0</td>\n",
        "      <td>English</td>\n",
        "      <td>UK</td>\n",
@@ -252,7 +282,14 @@
        "      <td>27000.0</td>\n",
        "      <td>448130642.0</td>\n",
        "      <td>Action|Thriller</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Tom Hardy</td>\n",
+       "      <td>The Dark Knight Rises</td>\n",
+       "      <td>1144337</td>\n",
+       "      <td>106759</td>\n",
+       "      <td>Joseph Gordon-Levitt</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>deception|imprisonment|lawlessness|police offi...</td>\n",
+       "      <td>http://www.imdb.com/title/tt1345836/?ref_=fn_t...</td>\n",
        "      <td>2701.0</td>\n",
        "      <td>English</td>\n",
        "      <td>USA</td>\n",
@@ -276,7 +313,14 @@
        "      <td>131.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Documentary</td>\n",
-       "      <td>...</td>\n",
+       "      <td>Doug Walker</td>\n",
+       "      <td>Star Wars: Episode VII - The Force Awakens    ...</td>\n",
+       "      <td>8</td>\n",
+       "      <td>143</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://www.imdb.com/title/tt5289954/?ref_=fn_t...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -288,57 +332,8 @@
        "      <td>NaN</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Color</td>\n",
-       "      <td>Andrew Stanton</td>\n",
-       "      <td>462.0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>475.0</td>\n",
-       "      <td>530.0</td>\n",
-       "      <td>Samantha Morton</td>\n",
-       "      <td>640.0</td>\n",
-       "      <td>73058679.0</td>\n",
-       "      <td>Action|Adventure|Sci-Fi</td>\n",
-       "      <td>...</td>\n",
-       "      <td>738.0</td>\n",
-       "      <td>English</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>PG-13</td>\n",
-       "      <td>263700000.0</td>\n",
-       "      <td>2012.0</td>\n",
-       "      <td>632.0</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>2.35</td>\n",
-       "      <td>24000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Color</td>\n",
-       "      <td>Sam Raimi</td>\n",
-       "      <td>392.0</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>James Franco</td>\n",
-       "      <td>24000.0</td>\n",
-       "      <td>336530303.0</td>\n",
-       "      <td>Action|Adventure|Romance</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1902.0</td>\n",
-       "      <td>English</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>PG-13</td>\n",
-       "      <td>258000000.0</td>\n",
-       "      <td>2007.0</td>\n",
-       "      <td>11000.0</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>2.35</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>7 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -348,8 +343,6 @@
        "2  Color         Sam Mendes                   602.0     148.0   \n",
        "3  Color  Christopher Nolan                   813.0     164.0   \n",
        "4    NaN        Doug Walker                     NaN       NaN   \n",
-       "5  Color     Andrew Stanton                   462.0     132.0   \n",
-       "6  Color          Sam Raimi                   392.0     156.0   \n",
        "\n",
        "   director_fb_likes  actor_3_fb_likes      actor_2_name  actor_1_fb_likes  \\\n",
        "0                0.0             855.0  Joel David Moore            1000.0   \n",
@@ -357,85 +350,107 @@
        "2                0.0             161.0      Rory Kinnear           11000.0   \n",
        "3            22000.0           23000.0    Christian Bale           27000.0   \n",
        "4              131.0               NaN        Rob Walker             131.0   \n",
-       "5              475.0             530.0   Samantha Morton             640.0   \n",
-       "6                0.0            4000.0      James Franco           24000.0   \n",
        "\n",
-       "         gross                           genres  ... num_user_for_reviews  \\\n",
-       "0  760505847.0  Action|Adventure|Fantasy|Sci-Fi  ...               3054.0   \n",
-       "1  309404152.0         Action|Adventure|Fantasy  ...               1238.0   \n",
-       "2  200074175.0        Action|Adventure|Thriller  ...                994.0   \n",
-       "3  448130642.0                  Action|Thriller  ...               2701.0   \n",
-       "4          NaN                      Documentary  ...                  NaN   \n",
-       "5   73058679.0          Action|Adventure|Sci-Fi  ...                738.0   \n",
-       "6  336530303.0         Action|Adventure|Romance  ...               1902.0   \n",
+       "         gross                           genres     actor_1_name  \\\n",
+       "0  760505847.0  Action|Adventure|Fantasy|Sci-Fi      CCH Pounder   \n",
+       "1  309404152.0         Action|Adventure|Fantasy      Johnny Depp   \n",
+       "2  200074175.0        Action|Adventure|Thriller  Christoph Waltz   \n",
+       "3  448130642.0                  Action|Thriller        Tom Hardy   \n",
+       "4          NaN                      Documentary      Doug Walker   \n",
        "\n",
-       "  language  country  content_rating       budget  title_year actor_2_fb_likes  \\\n",
-       "0  English      USA           PG-13  237000000.0      2009.0            936.0   \n",
-       "1  English      USA           PG-13  300000000.0      2007.0           5000.0   \n",
-       "2  English       UK           PG-13  245000000.0      2015.0            393.0   \n",
-       "3  English      USA           PG-13  250000000.0      2012.0          23000.0   \n",
-       "4      NaN      NaN             NaN          NaN         NaN             12.0   \n",
-       "5  English      USA           PG-13  263700000.0      2012.0            632.0   \n",
-       "6  English      USA           PG-13  258000000.0      2007.0          11000.0   \n",
+       "                                         movie_title  num_voted_users  \\\n",
+       "0                                            Avatar            886204   \n",
+       "1          Pirates of the Caribbean: At World's End            471220   \n",
+       "2                                           Spectre            275868   \n",
+       "3                             The Dark Knight Rises           1144337   \n",
+       "4  Star Wars: Episode VII - The Force Awakens    ...                8   \n",
        "\n",
-       "  imdb_score  aspect_ratio movie_fb_likes  \n",
-       "0        7.9          1.78          33000  \n",
-       "1        7.1          2.35              0  \n",
-       "2        6.8          2.35          85000  \n",
-       "3        8.5          2.35         164000  \n",
-       "4        7.1           NaN              0  \n",
-       "5        6.6          2.35          24000  \n",
-       "6        6.2          2.35              0  \n",
+       "   cast_total_fb_likes          actor_3_name  facenumber_in_poster  \\\n",
+       "0                 4834             Wes Studi                   0.0   \n",
+       "1                48350        Jack Davenport                   0.0   \n",
+       "2                11700      Stephanie Sigman                   1.0   \n",
+       "3               106759  Joseph Gordon-Levitt                   0.0   \n",
+       "4                  143                   NaN                   0.0   \n",
        "\n",
-       "[7 rows x 28 columns]"
+       "                                       plot_keywords  \\\n",
+       "0             avatar|future|marine|native|paraplegic   \n",
+       "1  goddess|marriage ceremony|marriage proposal|pi...   \n",
+       "2                bomb|espionage|sequel|spy|terrorist   \n",
+       "3  deception|imprisonment|lawlessness|police offi...   \n",
+       "4                                                NaN   \n",
+       "\n",
+       "                                     movie_imdb_link  num_user_for_reviews  \\\n",
+       "0  http://www.imdb.com/title/tt0499549/?ref_=fn_t...                3054.0   \n",
+       "1  http://www.imdb.com/title/tt0449088/?ref_=fn_t...                1238.0   \n",
+       "2  http://www.imdb.com/title/tt2379713/?ref_=fn_t...                 994.0   \n",
+       "3  http://www.imdb.com/title/tt1345836/?ref_=fn_t...                2701.0   \n",
+       "4  http://www.imdb.com/title/tt5289954/?ref_=fn_t...                   NaN   \n",
+       "\n",
+       "  language country content_rating       budget  title_year  actor_2_fb_likes  \\\n",
+       "0  English     USA          PG-13  237000000.0      2009.0             936.0   \n",
+       "1  English     USA          PG-13  300000000.0      2007.0            5000.0   \n",
+       "2  English      UK          PG-13  245000000.0      2015.0             393.0   \n",
+       "3  English     USA          PG-13  250000000.0      2012.0           23000.0   \n",
+       "4      NaN     NaN            NaN          NaN         NaN              12.0   \n",
+       "\n",
+       "   imdb_score  aspect_ratio  movie_fb_likes  \n",
+       "0         7.9          1.78           33000  \n",
+       "1         7.1          2.35               0  \n",
+       "2         6.8          2.35           85000  \n",
+       "3         8.5          2.35          164000  \n",
+       "4         7.1           NaN               0  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_movies = pd.read_csv('5000_movies_bis.csv')\n",
-    "df_movies.head(7)"
+    "# Affichage des données exploratoires de la dataframe\n",
+    "df = pd.read_csv('5000_movies_bis.csv')\n",
+    "pd.set_option('display.max_columns', 30)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3032,)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5043, 28)\n",
+      "100.0\n",
+      "(65,)\n",
+      "(2399,)\n",
+      "6255\n"
+     ]
     }
    ],
    "source": [
     " ##  combien y a-t-il d'observations/de variables ?\n",
     "\n",
-    "df_movies.shape\n",
+    "print(df.shape)\n",
     "\n",
     "## sur combien d'années se répartissent les données ?\n",
     "\n",
-    "np.max( df_movies['title_year']) - np.min( df_movies['title_year']) \n",
+    "print(np.max( df['title_year']) - np.min( df['title_year']) )\n",
     "\n",
     "##  combien de pays sont représentés ?\n",
     "\n",
-    "df_movies['country'].value_counts().shape\n",
+    "print(df['country'].value_counts().shape)\n",
     "\n",
     "## combien de réalisateurs différents dans la base ?\n",
     "\n",
-    "df_movies['director_name'].value_counts().shape\n",
+    "print(df['director_name'].unique().shape)\n",
     "\n",
     "## combien d'acteurs et d'actrices différentes ?\n",
     "\n",
-    "df_movies['actor_2_name'].value_counts().shape\n"
+    "actors = pd.Series( df[['actor_1_name','actor_2_name','actor_3_name']].values.flatten())\n",
+    "print(actors.nunique(dropna=True))\n"
    ]
   },
   {
@@ -443,88 +458,6 @@
    "metadata": {},
    "source": [
     "<a id='data_cleaning'></a>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5043 entries, 0 to 5042\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column                  Non-Null Count  Dtype  \n",
-      "---  ------                  --------------  -----  \n",
-      " 0   color                   5024 non-null   object \n",
-      " 1   director_name           4939 non-null   object \n",
-      " 2   num_critic_for_reviews  4993 non-null   float64\n",
-      " 3   duration                5028 non-null   float64\n",
-      " 4   director_fb_likes       4939 non-null   float64\n",
-      " 5   actor_3_fb_likes        5020 non-null   float64\n",
-      " 6   actor_2_name            5030 non-null   object \n",
-      " 7   actor_1_fb_likes        5036 non-null   float64\n",
-      " 8   gross                   4366 non-null   float64\n",
-      " 9   genres                  5043 non-null   object \n",
-      " 10  actor_1_name            5036 non-null   object \n",
-      " 11  movie_title             5043 non-null   object \n",
-      " 12  num_voted_users         5043 non-null   int64  \n",
-      " 13  cast_total_fb_likes     5043 non-null   int64  \n",
-      " 14  actor_3_name            5020 non-null   object \n",
-      " 15  facenumber_in_poster    5030 non-null   float64\n",
-      " 16  plot_keywords           4890 non-null   object \n",
-      " 17  movie_imdb_link         5043 non-null   object \n",
-      " 18  num_user_for_reviews    5022 non-null   float64\n",
-      " 19  language                5031 non-null   object \n",
-      " 20  country                 5038 non-null   object \n",
-      " 21  content_rating          4740 non-null   object \n",
-      " 22  budget                  4637 non-null   float64\n",
-      " 23  title_year              4935 non-null   float64\n",
-      " 24  actor_2_fb_likes        5030 non-null   float64\n",
-      " 25  imdb_score              5043 non-null   float64\n",
-      " 26  aspect_ratio            4714 non-null   float64\n",
-      " 27  movie_fb_likes          5043 non-null   int64  \n",
-      "dtypes: float64(13), int64(3), object(12)\n",
-      "memory usage: 1.1+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_movies.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       7.9\n",
-       "1       7.1\n",
-       "2       6.8\n",
-       "3       8.5\n",
-       "4       7.1\n",
-       "       ... \n",
-       "5038    7.7\n",
-       "5039    7.5\n",
-       "5040    6.3\n",
-       "5041    6.3\n",
-       "5042    6.6\n",
-       "Name: imdb_score, Length: 5043, dtype: float64"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_movies['imdb_score'] "
    ]
   },
   {
@@ -599,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +541,7 @@
        "(4998, 28)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,8 +549,8 @@
    "source": [
     "#Suppression des doublons de la dataframe\n",
     "\n",
-    "df_without_dubs = df_movies.drop_duplicates() \n",
-    "df_without_dubs.shape"
+    "df.drop_duplicates(inplace=True) \n",
+    "df.shape"
    ]
   },
   {
